videre endring av oppg
videre jobbing på min egen nettside innlevering

--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
 <meta charset="UTF-8">
 <title>Andeføtter</title>
+<link rel="stylesheet" type="text/css" href="style.css"/>
+<meta name="viewport" content="width=device-width, intial-scale=1.0">
     </head>
+
     <body>
         <header>
             <nav>
-                <span></span>
+                <span>
+                    <a href="index.html">Logo</a>
+                </span>
+                <ul>
+                    <li></li>
+                </ul>
             </nav>
+            <p>slogan</p>
         </header>
 <main>
     <h1>Intro til nettbutikken</h1>
 </main>
 <footer>laget av ylva romman-aas</footer>
     </body>
+
 </html>
