begynt mer seriøs koding inn hit
mer seriøs koding til nettsiden min med endring på logo til andeføtter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <span>
-                    <a href="index.html">Logo</a>
+                    <a href="index.html">Andeføtter</a>
                 </span>
                 <ul>
                     <li></li>
