--- a/index-side2.html
+++ b/index-side2.html
@@ -3,7 +3,7 @@
 
     <head>
 <meta charset="UTF-8">
-<title>Andeføtter</title>
+<title>Produktside</title>
 <link rel="stylesheet" type="text/css"/>
 <meta name="viewport" content="width=device-width, intial-scale=1.0">
     </head>
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <span>
-                    <a href="index.html">Logo</a>
+                    <a href="index.html">Andeføtter</a>
                 </span>
                 <ul>
                     <li></li>
@@ -21,7 +21,7 @@
             <p>slogan</p>
         </header>
 <main>
-    <h1>Intro til nettbutikken</h1>
+    <h1>Intro til produktsiden</h1>
 </main>
 <footer>laget av ylva romman-aas</footer>
     </body>
