--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/7aededd387.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawsome.css" rel="stylesheet">
 <link href="css/font/css/brands.css" rel="stylesheet">
@@ -16,7 +17,11 @@
             <nav>
                 <a href="index.html" id="Andeføtter">Andeføtter</a>
             <div>
+                <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-house"></i>
+                <i class="fa-solid fa-heart"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
             </div>
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
@@ -75,7 +80,7 @@
             x.className = "navbar"
         }
        })
-        
+
     </script>
     </body>
 </html>
