--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <script src="https://kit.fontawesome.com/7aededd387.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Neon&display=swap" rel="stylesheet">"
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawsome.css" rel="stylesheet">
 <link href="css/font/css/brands.css" rel="stylesheet">
@@ -22,6 +25,11 @@
                 <i class="fa-solid fa-house"></i>
                 <i class="fa-solid fa-heart"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
+                <i class="fa-solid fa-shoe-prints"></i>
+                <i class="fa-solid fa-face-smile-beam"></i>
+                <i class="fa-solid fa-gear"></i>
+                <i class="fa-solid fa-envelope"></i>
+                <i class="fa-solid fa-comment"></i>
             </div>
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
