prøver å fikse error i css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="https://kit.fontawesome.com/7aededd387.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Neon&display=swap" rel="stylesheet">"
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Neon&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawsome.css" rel="stylesheet">
 <link href="css/font/css/brands.css" rel="stylesheet">
@@ -21,7 +21,7 @@
                 <a href="index.html" id="Andeføtter">Andeføtter</a>
             <div>
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-bars"></i>
+                <i id="ham" class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-house"></i>
                 <i class="fa-solid fa-heart"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -30,6 +30,7 @@
                 <i class="fa-solid fa-gear"></i>
                 <i class="fa-solid fa-envelope"></i>
                 <i class="fa-solid fa-comment"></i>
+                <i class="fa-solid fa-money-bill"></i>
             </div>
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
