--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <i class="fa-solid fa-envelope"></i>
                 <i class="fa-solid fa-comment"></i>
                 <i class="fa-solid fa-money-bill"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-snapchat"></i>
             </div>
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
