fått in searchn bar

--- a/index.html
+++ b/index.html
@@ -18,28 +18,22 @@
         <div id="grid-container">
         <header>
             <nav>
+                
                 <a href="index.html" id="Andeføtter">Andeføtter</a>
             <div>
+                <input type="text" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i id="ham" class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-house"></i>
                 <i class="fa-solid fa-heart"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
-                <i class="fa-solid fa-shoe-prints"></i>
-                <i class="fa-solid fa-face-smile-beam"></i>
-                <i class="fa-solid fa-gear"></i>
-                <i class="fa-solid fa-envelope"></i>
-                <i class="fa-solid fa-comment"></i>
-                <i class="fa-solid fa-money-bill"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-snapchat"></i>
             </div>
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="#services">Services</a></li>
                 </ul>
+                
             </nav>
             <section>
                 <h1>Sko for brede føtter</h1>
@@ -60,6 +54,9 @@
                 <section>
                     <h2>dette er høyrejustert overskrift</h2>
                     <p>noe tilfeldig skrift til den høyere justerte siden</p>
+                    <i class="fa-solid fa-money-bill"></i>
+                    <i class="fa-solid fa-face-smile-beam"></i>
+                    <i class="fa-solid fa-shoe-prints"></i>
                 </section>   
             </section>
 
@@ -80,7 +77,12 @@
             </section>
         </main>
         <footer>
-
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-snapchat"></i>
+            <i class="fa-solid fa-gear"></i>
+            <i class="fa-solid fa-envelope"></i>
+            <i class="fa-solid fa-comment"></i>
         </footer>
     </div>
     <script>
