--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Neon&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawsome.css" rel="stylesheet">
-<link href="css/font/css/brands.css" rel="stylesheet">
-<link href="css/font/css/solid.css" rel="stylesheet">
+         <link href="css/font/css/brands.css" rel="stylesheet">
+         <link href="css/font/css/solid.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Andeføtter</title>
     </head>
+    
     <body>
         <div id="grid-container">
         <header>
@@ -33,7 +34,6 @@
                     <li><a href="products.html">Products</a></li>
                     <li><a href="#services">Services</a></li>
                 </ul>
-                
             </nav>
             <section>
                 <h1>Sko for brede føtter</h1>
@@ -50,7 +50,7 @@
             </section>
 
             <section class="flex-section right">
-                <img src="https://placehold.co/600x400" alt="Grå placeholder bilde">
+                <img src="https://placehold.co/600x400" style="max-width:100%;height:auto;">
                 <section>
                     <h2>dette er høyrejustert overskrift</h2>
                     <p>noe tilfeldig skrift til den høyere justerte siden</p>
